own login page and csrf working + added role table and custom roles(rights)

--- a/Server/src/main/resources/application.properties
+++ b/Server/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.jooq.sql-dialect=mysql
 
 #Enable SSL for webserver
 server.port = 443
-server.ssl.key-store: keystore.p12
+server.ssl.key-store: Server/keystore.p12
 server.ssl.key-store-password: mypassword
 server.ssl.keyStoreType: PKCS12
 server.ssl.keyAlias: tomcat
